[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/ButtonUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Fonts/Gluten/Gluten-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Audio/Auye.tres" type="AudioStream" id=3]
[ext_resource path="res://UI/Fonts/Bubblegum_Sans/BubblegumDynamic.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=5]
[ext_resource path="res://UI/Audio/BattleMusics/acción.ogg" type="AudioStream" id=6]
[ext_resource path="res://UI/Audio/BattleMusics/Battle Theme II v1.2.ogg" type="AudioStream" id=7]
[ext_resource path="res://UI/Audio/BattleMusics/battle 7.ogg" type="AudioStream" id=8]
[ext_resource path="res://UI/Audio/BattleMusics/another battle theme.ogg" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.211765, 0.211765, 0.211765, 1 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 3
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Node"]
script = ExtResource( 5 )

[node name="ButtonsPause" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -358.047
margin_top = -249.125
margin_right = 441.953
margin_bottom = 470.875
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Label" parent="ButtonsPause"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -432.0
margin_top = -232.0
margin_right = 432.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0.721569, 0, 1 )
text = "Ant Bugs"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pausa" type="Label" parent="ButtonsPause"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 104.768
margin_right = 200.0
margin_bottom = 194.768
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Pausa"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButtons" type="VBoxContainer" parent="ButtonsPause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -243.0
margin_right = 176.0
margin_bottom = 243.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" parent="ButtonsPause/MenuButtons" instance=ExtResource( 1 )]
margin_top = 139.0
margin_right = 352.0
margin_bottom = 188.0
text = "Continuar"

[node name="Oh-yeah" type="AudioStreamPlayer" parent="ButtonsPause/MenuButtons/ContinueButton"]
stream = ExtResource( 3 )

[node name="OptionsButton" parent="ButtonsPause/MenuButtons" instance=ExtResource( 1 )]
margin_top = 218.0
margin_right = 352.0
margin_bottom = 267.0
text = "Opções"

[node name="ExitButton" parent="ButtonsPause/MenuButtons" instance=ExtResource( 1 )]
margin_top = 297.0
margin_right = 352.0
margin_bottom = 346.0
text = "Menu Principal"

[node name="BattleThemes" type="Node" parent="."]

[node name="BattleTheme1" type="AudioStreamPlayer" parent="BattleThemes"]
stream = ExtResource( 6 )

[node name="BattleTheme2" type="AudioStreamPlayer" parent="BattleThemes"]
stream = ExtResource( 9 )

[node name="BattleTheme3" type="AudioStreamPlayer" parent="BattleThemes"]
stream = ExtResource( 8 )

[node name="BattleTheme4" type="AudioStreamPlayer" parent="BattleThemes"]
stream = ExtResource( 7 )

[connection signal="pressed" from="ButtonsPause/MenuButtons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ButtonsPause/MenuButtons/ExitButton" to="." method="_on_ExitButton_pressed"]
